tests/agl/rejections/parse/marker_unknown_at.agl
def f(@foo, x: int) -> int = x
